src/components/Layout/Layout.module.scss
.navbar {
	display: flex;
	padding: 12px 24px;
	justify-content: space-between;
	align-items: center;

	border-bottom: 1px solid var(--c-stroke-gray, #403f36);

	> div:first-of-type {
		width: 100%;
		display: flex;
		justify-content: space-between;
		flex-wrap: wrap;
		row-gap: 10px;
	}
}

.upper {
	display: flex;
	align-items: center;
}

.logo {
	height: 50px;
}

.right {
	display: flex;
	justify-content: space-between;
	align-items: center;
	gap: var(--s-5);
}

.add {
	gap: var(--s-2);

	svg {
		height: 20px;
		width: 20px;
	}
}

.left {
	display: flex;
	align-items: center;
	gap: var(--s-5);
	flex-wrap: wrap;
}

.lower {
	display: none;
	border-bottom: 1px solid var(--colors-fills-outlines-gray-3, #393939);
	background: var(--colors-fills-outlines-gray-2, #313131);
	justify-content: space-between;
	width: 100%;
	padding: var(--s-1) var(--s-3);
	align-items: center;

	> .feedback {
		font-weight: 600;
		font-size: var(--f-size-2);
		display: flex;
		gap: var(--s-3);
		align-items: center;

		&::before {
			content: "";
			width: 1px;
			display: inline-block;
			background: var(--colors-fills-outlines-gray-3, #393939);
			height: 24px;
			flex-shrink: 0;
		}
	}
}

.separator {
	width: 1px;
	background: var(--Stroke-Gray, #403f36);
	height: 24px;
}

.feedback {
	color: var(--colors-body-1, #efece0);
	font-size: var(--f-size-2);
	font-weight: 600;
}

.main {
	max-width: 1920px;
	margin-inline: auto;
}

.mobileFilter {
	display: none;
}

.footer {
	margin: var(--s-7) auto;
	width: fit-content;
	max-width: 600px;
	text-align: center;

	> p {
		margin-top: var(--s-4);
		padding-inline: var(--s-2);
		line-height: 1.6;
	}
}

@media screen and (max-width: 700px) {
	.main {
		max-width: 100%;
		width: 100%;
		margin-top: 160px;
	}

	.mobileFilter {
		display: block;
		border-top: 1px solid var(--c-stroke-gray, #403f36);
		width: 100%;
	}

	.desktopFilter {
		display: none;
	}

	.navbar {
		flex-direction: column;
		align-items: flex-start;
		padding: 0;
		transition: transform 0.2s ease-out;

		position: fixed;
		width: 100%;
		top: 0;
		left: 0;
		z-index: var(--z-5);
		background: var(--c-bg);

		> div:first-of-type {
			padding: 16px;
		}
	}

	.add {
		padding: 8px 16px;
	}

	.logo {
		height: 40px;
	}

	.separator {
		display: none;
	}

	.left > .feedback {
		display: none;
	}

	.lower {
		display: flex;
	}
}

